[gd_scene load_steps=11 format=2]

[ext_resource path="res://Root.gd" type="Script" id=1]
[ext_resource path="res://PlayerBody.gd" type="Script" id=2]
[ext_resource path="res://PortalPair.gd" type="Script" id=3]
[ext_resource path="res://PortalA.gd" type="Script" id=4]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="CapsuleShape" id=4]

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.216452, 0.22763, 0.296509 )

[sub_resource type="QuadMesh" id=5]

[node name="Root" type="Spatial"]
transform = Transform( 0.86348, 0, 0, 0, 0.86348, 0, 0, 0, 0.86348, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Cube" type="MeshInstance" parent="."]
transform = Transform( 0.506378, -0.325901, 0, 0.325901, 0.506378, 0, 0, 0, 0.602188, 1.05184, 5.16415, -1.31809 )
mesh = SubResource( 1 )
material/0 = null

[node name="Cube2" type="MeshInstance" parent="."]
transform = Transform( 4.72499, -3.04097, 0, 0.976735, 1.51763, -3.95875, 1.48837, 2.3126, 1.25378, 21.2909, 6.53353, -4.74866 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 32, 0, 0, 0, 1, 0, 0, 0, 32, 0, -1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 3 )
material/0 = null

[node name="PlayerBody" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 4, 0 )
script = ExtResource( 2 )

[node name="PlayerCollisionShape" type="CollisionShape" parent="PlayerBody"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -2, 0, 1, -3.25841e-07, 0, 0, 0 )
shape = SubResource( 4 )

[node name="PlayerHead" type="Spatial" parent="PlayerBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.6, 0 )

[node name="Camera" type="Camera" parent="PlayerBody/PlayerHead"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0117133, 0, -0.0556727 )
far = 200.0

[node name="PortalPair" type="Node" parent="."]
script = ExtResource( 3 )

[node name="PortalA" type="Spatial" parent="PortalPair"]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, -27, 2.25, 20 )
script = ExtResource( 4 )

[node name="RigidBody" type="RigidBody" parent="PortalPair/PortalA"]
contact_monitor = true
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true

[node name="CollisionShape" type="CollisionShape" parent="PortalPair/PortalA/RigidBody"]
transform = Transform( 17, 0, 0, 0, 9, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="PortalPair/PortalA/RigidBody/CollisionShape"]
transform = Transform( 0.470588, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="Viewport" type="Viewport" parent="PortalPair/PortalA/RigidBody/CollisionShape/MeshInstance"]
size = Vector2( 1024, 512 )
handle_input_locally = false
hdr = false
disable_3d = true

[node name="Camera" type="Camera" parent="PortalPair/PortalA/RigidBody/CollisionShape/MeshInstance/Viewport"]
transform = Transform( 0.437317, 0.754892, -0.488766, -0.789345, 0.582626, 0.193601, 0.430916, 0.30114, 0.850663, -26.5801, 4.83309, 26.9077 )
fov = 62.0706

[node name="PortalB" type="Spatial" parent="PortalPair"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.25, -26 )

[node name="MeshInstance" type="MeshInstance" parent="PortalPair/PortalB"]
transform = Transform( 8, 0, 0, 0, 4.5, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="Viewport" type="Viewport" parent="PortalPair/PortalB"]
handle_input_locally = false
render_target_update_mode = 3
